# dependabot-transitive-issue

./: .gitignore  README.md  app.py  index.js  package.json  pyproject.toml  requirements.txt
python-package/: README.md  pyproject.toml
python-package/src/dependabot_transitive_demo/: __init__.py
python-package/src/dependabot_transitive_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
