[tool.poetry]
name = "dependabot-transitive-issue"
version = "0.1.0"
description = ""
authors = ["jimasp <464080+jimasp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dependabot-transitive-demo = "1.0.0"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
