[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dependabot-transitive-demo"
version = "1.0.0"
description = "Demo package for testing Dependabot transitive dependency detection"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "anon", email = "noreply@example.com"}
]
keywords = ["dependabot", "security", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "urllib3==2.6.0",  # Has CVE-2021-33503 - CRLF injection vulnerability
]

[project.urls]
"Homepage" = "https://github.com/jimasp/dependabot-transitive-issue"
"Bug Reports" = "https://github.com/jimasp/dependabot-transitive-issue/issues"
